--- a/site/en/tutorials/images/classification.ipynb
+++ b/site/en/tutorials/images/classification.ipynb
@@ -285,7 +285,7 @@
         "id": "pFBhRrrEI49z"
       },
       "source": [
-        "It's good practice to use a validation split when developing your model. We will use 80% of the images for training, and 20% for validation."
+        "It's good practice to use a validation split when developing your model. Let's use 80% of the images for training, and 20% for validation."
       ]
     },
     {
@@ -402,7 +402,7 @@
         "id": "Wj4FrKxxJkoW"
       },
       "source": [
-        "The `image_batch` is a tensor of the shape `(32, 180, 180, 3)`. This is a batch of 32 images of shape `180x180x3` (the last dimension referes to color channels RGB). The `label_batch` is a tensor of the shape `(32,)`, these are corresponding labels to the 32 images. \n",
+        "The `image_batch` is a tensor of the shape `(32, 180, 180, 3)`. This is a batch of 32 images of shape `180x180x3` (the last dimension refers to color channels RGB). The `label_batch` is a tensor of the shape `(32,)`, these are corresponding labels to the 32 images. \n",
         "\n",
         "You can call `.numpy()` on the `image_batch` and `labels_batch` tensors to convert them to a `numpy.ndarray`.\n"
       ]
@@ -415,7 +415,7 @@
       "source": [
         "## Configure the dataset for performance\n",
         "\n",
-        "Let's make sure to use buffered prefetching so we can yield data from disk without having I/O become blocking. These are two important methods you should use when loading data.\n",
+        "Let's make sure to use buffered prefetching so you can yield data from disk without having I/O become blocking. These are two important methods you should use when loading data.\n",
         "\n",
         "`Dataset.cache()` keeps the images in memory after they're loaded off disk during the first epoch. This will ensure the dataset does not become a bottleneck while training your model. If your dataset is too large to fit into memory, you can also use this method to create a performant on-disk cache.\n",
         "\n",
@@ -453,7 +453,7 @@
         "id": "e56VXHMWJxYT"
       },
       "source": [
-        "The RGB channel values are in the `[0, 255]` range. This is not ideal for a neural network; in general you should seek to make your input values small. Here, we will standardize values to be in the `[0, 1]` by using a Rescaling layer."
+        "The RGB channel values are in the `[0, 255]` range. This is not ideal for a neural network; in general you should seek to make your input values small. Here, you will standardize values to be in the `[0, 1]` range by using a Rescaling layer."
       ]
     },
     {
@@ -473,7 +473,7 @@
         "id": "8aGpkwFaIw4i"
       },
       "source": [
-        "Note: The Keras Preprocesing utilities and layers introduced in this section are currently experimental and may change."
+        "Note: The Keras Preprocessing utilities and layers introduced in this section are currently experimental and may change."
       ]
     },
     {
@@ -506,7 +506,7 @@
         "id": "XWEOmRSBJ9J8"
       },
       "source": [
-        "Or, you can include the layer inside your model definition, which can simplify deployment. We will use the second approach here."
+        "Or, you can include the layer inside your model definition, which can simplify deployment. Let's use the second approach here."
       ]
     },
     {
@@ -515,7 +515,7 @@
         "id": "XsRk1xCwKZR4"
       },
       "source": [
-        "Note: we previously resized images using the `image_size` argument of `image_dataset_from_directory`. If you want to include the resizing logic in your model as well, you can use the [Resizing](https://www.tensorflow.org/api_docs/python/tf/keras/layers/experimental/preprocessing/Resizing) layer."
+        "Note: you previously resized images using the `image_size` argument of `image_dataset_from_directory`. If you want to include the resizing logic in your model as well, you can use the [Resizing](https://www.tensorflow.org/api_docs/python/tf/keras/layers/experimental/preprocessing/Resizing) layer."
       ]
     },
     {
@@ -653,8 +653,8 @@
         "acc = history.history['accuracy']\n",
         "val_acc = history.history['val_accuracy']\n",
         "\n",
-        "loss=history.history['loss']\n",
-        "val_loss=history.history['val_loss']\n",
+        "loss = history.history['loss']\n",
+        "val_loss = history.history['val_loss']\n",
         "\n",
         "epochs_range = range(epochs)\n",
         "\n",
@@ -721,9 +721,9 @@
         "id": "GxYwix81M2YO"
       },
       "source": [
-        "Overfitting generally occurs when there are a small number of training examples. [Data augmentation](https://www.tensorflow.org/tutorials/images/data_augmentation) takes the approach of generating additional training data from your existing examples by augmenting then using random transformations that yield believable-looking images. This helps expose the model to more aspects of the data and generalize better.\n",
+        "Overfitting generally occurs when there are a small number of training examples. [Data augmentation](https://www.tensorflow.org/tutorials/images/data_augmentation) takes the approach of generating additional training data from your existing examples by augmenting them using random transformations that yield believable-looking images. This helps expose the model to more aspects of the data and generalize better.\n",
         "\n",
-        "We will implement data augmentation using experimental [Keras Preprocessing Layers](https://www.tensorflow.org/api_docs/python/tf/keras/layers/experimental/preprocessing/?version=nightly). These can be included inside your model like other layers, and run on the GPU."
+        "You will implement data augmentation using experimental [Keras Preprocessing Layers](https://www.tensorflow.org/api_docs/python/tf/keras/layers/experimental/preprocessing/?version=nightly). These can be included inside your model like other layers, and run on the GPU."
       ]
     },
     {
@@ -778,7 +778,7 @@
         "id": "tsjXCBLYYNs5"
       },
       "source": [
-        "We will use data augmentation to train a model in a moment."
+        "You will use data augmentation to train a model in a moment."
       ]
     },
     {
