--- a/site/en/tutorials/images/transfer_learning_with_hub.ipynb
+++ b/site/en/tutorials/images/transfer_learning_with_hub.ipynb
@@ -91,13 +91,17 @@
       "outputs": [],
       "source": [
         "import numpy as np\n",
+        "import os\n",
         "import time\n",
         "\n",
         "import PIL.Image as Image\n",
         "import matplotlib.pylab as plt\n",
         "\n",
         "import tensorflow as tf\n",
-        "import tensorflow_hub as hub"
+        "import tensorflow_hub as hub\n",
+        "\n",
+        "# Load compressed models from tensorflow_hub\n",
+        "os.environ['TFHUB_MODEL_LOAD_FORMAT'] = 'COMPRESSED'"
       ]
     },
     {
