--- a/site/en/tutorials/keras/text_classification_with_hub.ipynb
+++ b/site/en/tutorials/keras/text_classification_with_hub.ipynb
@@ -132,11 +132,15 @@
       },
       "outputs": [],
       "source": [
+        "import os\n",
         "import numpy as np\n",
         "\n",
         "import tensorflow as tf\n",
         "import tensorflow_hub as hub\n",
         "import tensorflow_datasets as tfds\n",
+        "\n",
+        "# Load compressed models from tensorflow_hub\n",
+        "os.environ[\"TFHUB_MODEL_LOAD_FORMAT\"] = \"COMPRESSED\"\n",
         "\n",
         "print(\"Version: \", tf.__version__)\n",
         "print(\"Eager mode: \", tf.executing_eagerly())\n",
